<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/background"
    tools:ignore="ContentDescription,smallsp,RtlHardcoded">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/settings"
        android:textColor="@color/graytext1"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="213dp"
        android:layout_marginBottom="55dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/contactdetails"
                android:layout_marginTop="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginBottom="9dp"
                android:textColor="@color/bluetext"
                android:textSize="23sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/setting1"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:src="@drawable/ic_email"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="77dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/emails"
                    android:textColor="@color/graytext1"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/setting2"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:src="@drawable/ic_phone"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="77dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/phones"
                    android:textColor="@color/graytext1"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/setting3"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:src="@drawable/ic_gps"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="77dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/adresss"
                    android:textColor="@color/graytext1"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/securitysettings"
                android:layout_marginTop="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginBottom="9dp"
                android:textColor="@color/bluetext"
                android:textSize="23sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/setting4"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:src="@drawable/ic_ps_reset"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="77dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/resets"
                    android:textColor="@color/graytext1"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/setting5"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:src="@drawable/ic_lock"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="77dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/pins"
                    android:textColor="@color/graytext1"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/appsettings"
                android:layout_marginTop="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginBottom="9dp"
                android:textColor="@color/bluetext"
                android:textSize="23sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/setting6"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:src="@drawable/ic_notif"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="77dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/notifs"
                    android:textColor="@color/graytext1"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/setting7"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:src="@drawable/ic_baseline_info_24"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="77dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/abouts"
                    android:textColor="@color/graytext1"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemBackground="@color/white"
        app:menu="@menu/menu_nav"
        android:layout_alignParentBottom="true">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>