<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesananActivity"
    android:background="@color/background"
    tools:ignore="ContentDescription,smallsp,RtlHardcoded">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/pesanan"
        android:textColor="@color/graytext1"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="213dp"
        android:layout_marginBottom="55dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
             android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/pesanan1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="11dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:layout_marginTop="43.5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/foodname4"
                    android:textColor="@color/graytext1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:text="@string/price"
                    android:layout_marginTop="71dp"
                    android:layout_marginLeft="27dp"
                    android:textColor="@color/bluetext"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/time"
                    android:layout_marginTop="139dp"
                    android:layout_marginLeft="115dp"
                    android:textColor="@color/graytext2"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="133.45dp"
                    android:layout_height="122.33dp"
                    android:src="@drawable/foodimg4s"
                    android:layout_gravity="right"
                    android:layout_marginRight="26dp"
                    android:layout_marginTop="39dp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemBackground="@color/white"
        app:menu="@menu/menu_nav"
        android:layout_alignParentBottom="true">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>