<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesanActivity"
    android:background="@color/background"
    tools:ignore="ContentDescription,smallsp,RtlHardcoded">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/pesan"
        android:textColor="@color/graytext1"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="213dp"
        android:layout_marginBottom="55dp"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/pesan1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="11dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/notif1"
            android:textColor="@color/graytext1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="6dp"
            android:layout_marginTop="52dp"
            android:layout_marginLeft="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/waktu1"
            android:textColor="@color/graytext2"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/id_circle_red"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/pesan2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="11dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/notif2"
                android:textColor="@color/graytext1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dp"
                android:layout_marginTop="52dp"
                android:layout_marginLeft="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/waktu1"
                android:textColor="@color/graytext2"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/id_circle_red"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemBackground="@color/white"
        app:menu="@menu/menu_nav"
        android:layout_alignParentBottom="true">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>